--- a/src/app/components/admin/head/head.component.html
+++ b/src/app/components/admin/head/head.component.html
@@ -1,4 +1,6 @@
-<h2 class="Color Large">Head settings</h2>
+<header>
+    <h2 class="Color Large">Head settings</h2>
+</header>
 <div id="prime-settings">
     <div id="files" class="block BackgroundColorLight">
         <h3 class="Color Big">Upload Files</h3>
