--- a/src/app/components/admin/header-footer/header-footer.component.html
+++ b/src/app/components/admin/header-footer/header-footer.component.html
@@ -1,13 +1,14 @@
 <app-edit-config-forms></app-edit-config-forms>
 <div class="constructor">
-    <h2 class="Color Large">Header/Footer constructor</h2>
+    <header>
+        <h2 class="Color Large">Header/Footer constructor</h2>
+    </header>
     <div class="constructorMain">
         <div class="clone-container" id="clone-container"></div>
         <header class="element header" dropzone="true" placeholder="header"></header>
         <footer class="element header" dropzone="true" placeholder="footer"></footer>
     </div>
 </div>
-
 <div class="constructorAside">
     <div class="constructorAsideBtn">
         <p (click)="updateImage()">UpadePage</p>
