--- a/src/app/components/admin/home/home.component.html
+++ b/src/app/components/admin/home/home.component.html
@@ -28,7 +28,7 @@
     </div>
     <h2>Create something new here!</h2>
     <div id="welcome-block">
-        <p id="welcome-text"><span></span>Some brief description. Some brief description. Some briefdescription.Somebriefdescription.<span></span></p>
+        <p id="welcome-text"><span></span>Let's make this day special by starting something amazing! In your CMS, you'll find all the tools to bring your creative ideas to life.<span></span></p>
         <div id="startBlock">
             <button id="start"><p>Get started!</p></button>
             <label for="start"><p>Login to your account!</p></label>
