--- a/src/app/components/admin/page-constructor/page-constructor.component.html
+++ b/src/app/components/admin/page-constructor/page-constructor.component.html
@@ -1,13 +1,11 @@
 <app-edit-config-forms></app-edit-config-forms>
-
 <div class="constructor">
-    <h2>Constructor - {{name}}</h2>
+    <h2 class="Color Large">{{name}} constructor</h2>
     <div class="constructorMain">
         <div class="clone-container" id="clone-container"></div>
-        <main class="element header" dropzone="true" placeholder="main"></main>
+        <main class="element main" dropzone="true" ></main>
     </div>
 </div>
-
 <div class="constructorAside">
     <div class="constructorAsideBtn">
         <p (click)="updateImage()">UpadePage</p>
