--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,1 +1,3 @@
-<app-element *ngFor="let item of children" [element]="item" [ngClass]="item.properties?.className ? item.properties.className : null"></app-element>
+<main>
+    <app-element *ngFor="let item of children" [element]="item" [ngClass]="item.properties?.className ? item.properties.className : null"></app-element>
+</main>
