--- a/src/app/components/admin/admin/admin.component.scss
+++ b/src/app/components/admin/admin/admin.component.scss
@@ -12,6 +12,7 @@
     &>div{
         display: flex;
         justify-content: space-between;
+        align-items: start;
         flex-grow: 1;
         height: calc(100vh - $size-index * 4.5);
     }
