--- a/src/app/components/admin/aside/aside.component.scss
+++ b/src/app/components/admin/aside/aside.component.scss
@@ -5,7 +5,7 @@
 aside{
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: 1;
     position: relative;
     ul{
         width: 100%;
@@ -14,9 +14,12 @@ aside{
         margin: 0px;
         padding: 0px;
         #focus{
-            background-color: $color;
+            background-color: $color-opacity-opacity;
+            z-index: 1;
+            transform: translate(5%, 0%);
+            scale: 1.1;
             a{
-                color: black !important;
+                color: $color !important;
             }
         }
         li{
@@ -43,7 +46,13 @@ aside{
             margin-top: -3px;
         }
         li:not(#focus):hover{
-            margin-left: 10px;
+            background-color: $color-opacity-opacity;
+            z-index: 1;
+            transform: translate(2.5%, 0%);
+            scale: 1.05;
+            a{
+                color: $color !important;
+            }
         }
     }
 }
