--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,30 +1,14 @@
-<h2 class="Color Large">Dashboard</h2>
+<header>
+    <h2 class="Color Large">Dashboard</h2>
+</header>
 <div id="stats-actions">
     <div class="block OpacityBorderColor">
         <h3 class="Color Middle">WebSite Stats</h3>
         <div id="start">
-            <div id="stats">
-                <div class="stat Color Small">
-                    <img src="assets/imgs/dashboard/pages.svg" alt="">
-                    <p class="Color">{{pages}} pages</p>
-                </div>
-                <div class="stat Color Small">
-                    <img src="assets/imgs/dashboard/people.png" alt="">
-                    <p class="Color">{{people}} people</p>
-                </div>
-                <div class="stat Color Small">
-                    <img src="assets/imgs/dashboard/pages.svg" alt="">
-                    <p class="Color">{{pages}} pages</p>
-                </div>
-                <div class="stat Color Small">
-                    <img src="assets/imgs/dashboard/people.png" alt="">
-                    <p class="Color">{{people}} people</p>
-                </div>
-            </div>
             <a href="/home" class="Color BackgroundColorBtn BorderColor">Welcome WebSite</a>
         </div>
     </div>
-    <div class="block OpacityBorderColor" style="width: 25%;">
+    <div class="block OpacityBorderColor" style="width: 75%;">
         <h3 class="Color Middle">Last action in pages</h3>
         <div id="actions">
             <div class="action Color Tiny BackgroundColorBtn">
