--- a/src/app/components/admin/dashboard/dashboard.component.scss
+++ b/src/app/components/admin/dashboard/dashboard.component.scss
@@ -20,6 +20,7 @@
     border: 5px solid;
     flex-grow: 1;
     margin: 10px;
+    
 }
 #stats-actions{
     width: 100%;
@@ -52,6 +53,7 @@
         }
         a{
             display: block;
+            width: max-content;
             font-size: calc($size-index * 0.8);
             text-align: center;
             margin: 0px;
@@ -59,7 +61,6 @@
             border-radius: 10px;
             border: 4px solid;
             padding: 10px 5%;
-            max-width: 30%;
         }
     }
     #actions{
