--- a/src/app/components/admin/database/database.component.html
+++ b/src/app/components/admin/database/database.component.html
@@ -1,1 +1,217 @@
-<p>database works!</p>
+<div class="window" [ngStyle]="{'opacity': modalWindowName == 'createTable'? 1:0, 'pointer-events': modalWindowName == 'createTable'? 'all':''}">
+    <div class="bg" (click)="returnModalWindow()"></div>
+    <div class="form-db-table BorderColor">
+        <header>
+            <input class="Color Middle" type="text" value="Table name" (input)="changeTableName($event)"
+                [ngStyle]="{'color': emptyTableNameStatus? 'red': ''}">
+            <p class="Color Small">A little advice. For the table name, we advise you to write in plural</p>
+        </header>
+        <div class="fields">
+            <div class="field" *ngFor="let item of showFieldTables; let i = index">
+                <input class="Small" type="text" [attr.place]="i" value="{{item.fieldName}}"
+                    placeholder="Field name (column name)" (input)="changeColumnName($event, i)">
+                <select [attr.place]="i" (input)="changeColumnType($event, i)">
+                    <option value="STRING" [selected]="item.type == 'STRING'">STRING</option>
+                    <option value="TEXT" [selected]="item.type == 'TEXT'">TEXT</option>
+                    <option value="INTEGER" [selected]="item.type == 'INTEGER'">INTEGER</option>
+                    <option value="DOUBLE" [selected]="item.type == 'DOUBLE'">DOUBLE</option>
+                    <option value="DATE" [selected]="item.type== 'DATE'">DATE</option>
+                    <option value="DATEONLY" [selected]="item.type == 'DATEONLY'">DATEONLY</option>
+                    <option value="IMG" [selected]="item.type == 'IMG'">IMAGE</option>
+                </select>
+                <p (click)="deleteField(i)">Delete</p>
+            </div>
+        </div>
+        <div class="btns">
+            <div class="group">
+                <p class="Tiny" (click)="addField()">Add a field <img src="./assets/imgs/db/add.png" alt=""></p>
+            </div>
+            <div class="group">
+                <div class="btn-container">
+                    <p class="Color Small" [ngStyle]="{'transform': createdStatus? 'translate(0%, -100%)':''}">created
+                    </p>
+                    <p class="Tiny" (click)="createTable($event)">Save table</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="window"
+    [ngStyle]="{'opacity': modalWindowName == 'editTable'? 1:0, 'pointer-events': modalWindowName == 'editTable'? 'all':''}">
+    <div class="bg" (click)="returnModalWindow()"></div>
+    <div class="form-db-table BorderColor">
+        <header>
+            <p class="Color Middle" type="text">{{tableName}} table editor</p>
+        </header>
+        <div class="fields">
+            <div class="field" *ngFor="let item of showFieldTables; let i = index">
+                <input class="Small" #myInput type="text" [ngClass]="{'Color': item.fieldName !== myInput.value }"
+                    [attr.place]="i" value="{{item.fieldName}}" placeholder="Field name (column name)"
+                    (input)="changeColumnName($event, i)">
+                <select [attr.place]="i" (input)="changeColumnType($event, i)">
+                    <option value="STRING" [selected]="item.type == 'STRING'">STRING</option>
+                    <option value="TEXT" [selected]="item.type == 'TEXT'">TEXT</option>
+                    <option value="INTEGER" [selected]="item.type == 'INTEGER'">INTEGER</option>
+                    <option value="DOUBLE" [selected]="item.type == 'DOUBLE'">DOUBLE</option>
+                    <option value="DATE" [selected]="item.type == 'DATE'">DATE</option>
+                    <option value="DATEONLY" [selected]="item.type == 'DATEONLY'">DATEONLY</option>
+                    <option value="IMG" [selected]="item.type == 'IMG'">IMAGE</option>
+                </select>
+                <p (click)="deleteField(i)">Delete</p>
+            </div>
+
+        </div>
+        <div class="btns">
+            <div class="group">
+                <p class="Tiny" (click)="addField()">Add a field <img src="./assets/imgs/db/add.png" alt=""></p>
+            </div>
+            <div class="group">
+                <div class="btn-container">
+                    <p class="Color Small" [ngStyle]="{'transform': createdStatus? 'translate(0%, -100%)':''}">updated
+                    </p>
+                    <p class="Tiny" (click)="changeTableField()">Update table</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="window"
+    [ngStyle]="{'opacity': modalWindowName == 'tableValues'? 1:0, 'pointer-events': modalWindowName == 'tableValues'? 'all':''}">
+    <div class="bg" (click)="returnModalWindow()"></div>
+    <div class="table-values BorderColor">
+        <header>
+            <p class="Color Middle" type="text">{{tableName}} table editor</p>
+        </header>
+        <div class="body">
+            <div class="saved-data">
+                <section class="data BorderColor" *ngFor="let value of tableValues; let i = index">
+                    <ng-container *ngFor="let field of getTableKeys(value)">
+                        <article>
+                            <p class="label Color Small">{{field}}:</p>
+                            <p class="Color Small" *ngIf="getColumnType(field) == undefined">{{getMainString(value[field])}}</p>
+                            <input class="Small BorderColor" type="text" *ngIf="getColumnType(field) == 'STRING'" placeholder="write the details" (input)="changeTableValueField($event, i, field)" value="{{value[field]}}">
+                            <input class="Small BorderColor" type="number" *ngIf="getColumnType(field) == 'INTEGER'" (input)="changeTableValueField($event, i, field)" value="{{value[field]}}">
+                            <input class="Small BorderColor" type="number" *ngIf="getColumnType(field) == 'DOUBLE'" step="0.1" (input)="changeTableValueField($event, i, field)" value="{{value[field]}}">
+                            <input class="Small BorderColor" type="date" *ngIf="getColumnType(field) == 'DATEONLY'" (input)="changeTableValueField($event, i, field)" value="{{value[field]}}">
+                            <input class="Small BorderColor" type="datetime-local" *ngIf="getColumnType(field) == 'DATE'" (input)="changeTableValueField($event, i, field)" value="{{value[field]}}">
+                            <select class="Small BorderColor" *ngIf="getColumnType(field) == 'IMG'" (change)="changeTableValueField($event, i, field)">
+                                <option value="{{img.path}}" *ngFor="let img of showImgs" [selected]="img.path == value[field]">
+                                    {{img.aliasName.split('.')[0]}}
+                                </option>
+                            </select>
+                            <textarea class="Small BorderColor" *ngIf="getColumnType(field) == 'TEXT'" (input)="changeTableValueField($event, i, field)">{{value[field]}}</textarea>
+                        </article>
+                    </ng-container>
+                    <div class="tableValuesBtn">
+                        <p class="ColorBackground Tiny" (click)="sendUpdateTableValue(i)">update</p>
+                        <p class="Tiny" (click)="sendDeleteTableValue(i)">delete</p>
+                    </div>
+                </section>
+            </div>
+            <div class="insert-row" [ngClass]="{'showTableValueInsert': formTableValueinsert}">
+                <ng-container *ngFor="let item of showFieldTables">
+                    <div class="field" [ngSwitch]="item.type">
+                        <p class="Color Small">{{item.fieldName}}</p>
+                        <input class="Small BorderColor" type="text" *ngSwitchCase="'STRING'"
+                            [attr.fieldName]="item.fieldName" placeholder="write the details"
+                            (input)="changeTableValue($event)">
+                        <input class="Small BorderColor" type="number" *ngSwitchCase="'INTEGER'"
+                            [attr.fieldName]="item.fieldName" (input)="changeTableValue($event)">
+                        <input class="Small BorderColor" type="number" *ngSwitchCase="'DOUBLE'" step="0.1"
+                            [attr.fieldName]="item.fieldName" (input)="changeTableValue($event)">
+                        <input class="Small BorderColor" type="date" *ngSwitchCase="'DATEONLY'"
+                            [attr.fieldName]="item.fieldName" (input)="changeTableValue($event)">
+                        <input class="Small BorderColor" type="datetime-local" *ngSwitchCase="'DATE'"
+                            [attr.fieldName]="item.fieldName" (input)="changeTableValue($event)">
+                        <select class="Small BorderColor" *ngSwitchCase="'IMG'" [attr.fieldName]="item.fieldName"
+                            (change)="changeTableValue($event)">
+                            <option value="--" selected disabled>--</option>
+                            <option value="{{img.path}}" *ngFor="let img of showImgs">
+                                {{img.aliasName.split('.')[0]}}
+                            </option>
+                        </select>
+                        <textarea class="Small BorderColor" *ngSwitchCase="'TEXT'" [attr.fieldName]="item.fieldName"
+                            (input)="changeTableValue($event)"></textarea>
+                    </div>
+                </ng-container>
+
+            </div>
+            <div class="btns">
+                <p class="Small ColorBackground OpacityBorderColor" (click)="toggleInsertTableValue(true)">insert value</p>
+                <button class="Small ColorBackground OpacityBorderColor" [ngClass]="{'showTableValueInsert': formTableValueinsert}" (click)="insertDataTableValue()">add data</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="window" [ngStyle]="{'opacity': modalWindowName == 'warningUpdate'? 1:0, 'pointer-events': modalWindowName == 'warningUpdate'? 'all':''}">
+    <div class="bg"></div>
+    <div class="warning">
+        <img src="./assets/imgs/db/recheck.png" alt="">
+        <h3 class="Big"></h3>
+        <p class="Middle"><span style="color: darkgoldenrod;">Warning!</span> If you delete fields, the data in the
+            fields will be lost</p>
+        <button class="Small" (click)="permamentUpdateTable()">Update</button>
+    </div>
+</div>
+<div class="window" [ngStyle]="{'opacity': modalWindowName == 'warningDelete'? 1:0, 'pointer-events': modalWindowName == 'warningDelete'? 'all':''}">
+    <div class="bg" (click)="returnModalWindow()"></div>
+    <div class="warning">
+        <img src="./assets/imgs/db/delete.png" alt="">
+        <h3 class="Big"></h3>
+        <p class="Middle"><span style="color: red;">Warning!</span> A deleted table cannot be recovered.</p>
+        <button class="Small" (click)="permamentDeleteTable()">Delete</button>
+    </div>
+</div>
+<header>
+    <h2 class="Color Large">database configs</h2>
+    <div class="btns">
+        <p class="Small ColorBackground OpacityBorderColor" (click)="openWindowCreateTable('createTable')">create table
+        </p>
+    </div>
+</header>
+<div class="tables lastTables BackgroundColorLight BorderColor" [ngStyle]="{'flex-grow': openTableView == 'last'? '1': ''}">
+    <header>
+        <h3 class="Color Middle" (click)="changeTableView('last')">Last updated tables</h3>
+        <div class="columnNames">
+            <p class="Color Small">Table name</p>
+            <p class="Color Small">Last update date</p>
+            <p class="Color Small">Buttons</p>
+        </div>
+    </header>
+    <section class="tables-container" [ngStyle]="{'max-height': openTableView == 'last'? '55vh': '0vh'}">
+        <article class="table" *ngFor="let item of lastUpdatedTables">
+            <p>{{item.tableName}}</p>
+            <p>{{item.updatedAt.split("T")[0]}}</p>
+            <div class="tableFuncBtns">
+                <div class="btn">Delete</div>
+                <div class="btn">Edit</div>
+                <div class="btn">Insert</div>
+            </div>
+        </article>
+    </section>
+</div>
+<div class="tables allTables BackgroundColorLight BorderColor" [ngStyle]="{'flex-grow': openTableView == 'all'? '1': ''}">
+
+    <header>
+        <h3 class="Color Middle" (click)="changeTableView('all')" style="width: 65%;">All tables</h3>
+        <input class="Small BackgroundColor" type="text" placeholder="Search table" (input)="searchTables($event)">
+        <div class="columnNames">
+            <p class="Color Small">Table name</p>
+            <p class="Color Small">Last update date</p>
+            <p class="Color Small">Buttons</p>
+        </div>
+    </header>
+    <section class="tables-container" [ngStyle]="{'max-height': openTableView == 'all'? '55vh': '0vh'}">
+        <article class="table" *ngFor="let item of showTables">
+            <p>{{item.tableName}}</p>
+            <p>{{item.updatedAt.split("T")[0]}}</p>
+            <div class="tableFuncBtns">
+                <div class="btn" (click)="deleteTable(item.tableName)">Delete</div>
+                <div class="btn" (click)="openEditForm(item.id)">Edit</div>
+                <div class="btn" (click)="openTableValues(item.tableName)">Data</div>
+            </div>
+        </article>
+    </section>
+</div>
