--- a/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
+++ b/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
@@ -5,7 +5,7 @@
     top: 0px;
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 2;
     perspective: 100px;
     transition-property: opacity;
     transition-duration: 0.5s;
@@ -194,6 +194,7 @@
                 transition-duration: .5s;
                 margin: 10px 0px;
                 background-color: $color-opacity-opacity;
+                user-select: none;
                 &:hover{
                     color: white;
                     background-color: $color;
