--- a/src/app/components/admin/head/head.component.scss
+++ b/src/app/components/admin/head/head.component.scss
@@ -2,6 +2,7 @@
 :host {
     flex-grow: 1;
     max-width: 86%;
+    height: 95%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
@@ -15,10 +16,12 @@
     box-sizing: border-box;
     border: 3px solid $color;
     display: flex;
+    flex-grow: 1;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: start;
     border-radius: 5px;
+    box-shadow:  0px 0px 5px 1px $color-opacity-opacity, inset 0px 0px 5px 1px $color-opacity-opacity;
     h3 {
         width: 100%;
         margin: 0px;
@@ -147,6 +150,7 @@ button, .button {
                     color: white;
                     padding: 5px;
                     resize: none;
+                    border-radius: 10px;
                 }
                 textarea{
                     height: 10vh;
