--- a/src/app/components/admin/page-constructor/page-constructor.component.scss
+++ b/src/app/components/admin/page-constructor/page-constructor.component.scss
@@ -1,5 +1,4 @@
-$color: rgba(114, 48, 180, 0.68);
-$size-index: calc(1vw + 1vh);
+@import "../../../../styles.scss";
 :host {
     position: relative;
     flex-grow: 1;
@@ -11,23 +10,8 @@ $size-index: calc(1vw + 1vh);
     align-items: start;
     justify-content: space-between;
     flex-wrap: wrap;
-    color: rgb(153, 102, 204);
     overflow: scroll;
     &::-webkit-scrollbar{
         display: none;
     }
-}
-
-h2{
-    margin: 0px;
-    width: 100%;
-    height: 10vh;
-    text-transform: uppercase;
-    font-family: "Asap", sans-serif;
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: calc($size-index * 2.2);
-}
-.element{
-    box-shadow: inset 0px 0px 10px $color;
 }
