--- a/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.scss
+++ b/src/app/components/admin/uploaded-gallery/uploaded-gallery.component.scss
@@ -1,26 +1,47 @@
-$color: rgba(114, 48, 180, 0.68);
-$size-index: calc(1vw + 1vh);
+@import "../../../../styles.scss";
 .uploadedGallery{
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    height: calc(100vh - $size-index * 4.5);
+    z-index: 4;
     .images{
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        height: 100%;
-        width: 16vw;
-        transition-duration: 0.5s;
-        box-sizing: border-box;
-        background-color: rgb(27, 27, 27);
-        border: 6px solid $color;
-        border-radius: 20px;
-        padding: 10px;
-        overflow-y: scroll;
-        z-index: 4;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        max-width: 80%;
+        max-height: 80%;
+        overflow: scroll;
         &::-webkit-scrollbar{
             display: none;
+        }
+        .img-card{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            max-width: 15%;
+            height: max-content;
+            transition-duration: .5s;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 10px;
+            &:hover{
+                scale: 1.1;
+            }
+            .back-img{
+                position: absolute;
+                width: 105%;
+                height: 105%;
+                filter: blur(8px);
+                transition-duration: .5s;
+                opacity: 0.65;
+                background-size: cover;
+                background-position: center;
+                z-index: -1;
+            }
+            img{
+                width: 90%;
+                height: auto;
+                z-index: 4;
+            }
         }
     }
     button{
