--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
-
 $color: rgb(52, 178, 169);
 $color-hover: rgb(35, 217, 205);
-$color-opacity: rgba(51, 220, 208, .6);
+$color-opacity: rgba(51, 220, 208, 0.6);
 $color-opacity-hover: rgba(35, 217, 205, 0.6);
-$color-opacity-opacity: rgba(51, 220, 208, .3);
+$color-opacity-opacity: rgba(51, 220, 208, 0.3);
 $size-index: calc(1vw + 1vh);
 html,
 body {
@@ -15,55 +14,63 @@ body {
     box-sizing: border-box;
 }
 
-.constructor{
+.constructor {
     width: 80%;
     flex-grow: 1;
 }
-.clone-container{
+.clone-container {
     position: absolute;
     left: 0px;
     top: 0px;
     pointer-events: none;
-    &>.element{
+    & > .element {
         width: 15vw !important;
         height: 10vh !important;
         pointer-events: none;
         transition-duration: 0s !important;
         transform: translate(-50%, -50%);
-        &>*{
+        box-shadow: inset 0px 0px 10px $color;
+
+        & > * {
             display: none;
         }
     }
 }
-.constructorMain{
+.constructorMain {
     position: relative;
     width: 100%;
     min-height: 90%;
-    &>*{
+    & > * {
         width: 100%;
     }
-    header, footer, main{
+    header,
+    footer,
+    main,
+    .template-body {
         min-height: 20vh;
         padding: 15px;
+        box-sizing: border-box;
         width: 100%;
-        .img{
+        box-shadow: inset 0px 0px 10px $color;
+        .img {
             flex-grow: 2;
         }
-        .element{
+        .element {
             min-height: 10vh;
             padding: 15px;
             box-sizing: border-box;
             max-height: 100%;
-            img{
+            box-shadow: inset 0px 0px 10px $color;
+            img {
                 object-fit: contain;
             }
         }
     }
     * {
         transition-property: left, right, background-color;
-        transition-duration: .5s;
+        transition-duration: 0.5s;
     }
-    a{
+    a {
         // pointer-events: none;
         width: 100%;
         height: 100%;
@@ -72,7 +79,7 @@ body {
         align-items: center;
     }
 }
-.constructorAside{
+.constructorAside {
     position: sticky;
     top: 0px;
     display: flex;
@@ -81,12 +88,11 @@ body {
     align-items: end;
     height: 100%;
     pointer-events: none;
-    z-index: 2;
     background-color: rgb(27, 27, 27);
     border: 6px solid $color;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    .constructorAsideBtn{
+    .constructorAsideBtn {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -94,7 +100,7 @@ body {
         height: 10%;
         box-sizing: border-box;
         pointer-events: all;
-        p{
+        p {
             margin: 0px;
             text-transform: uppercase;
             color: whitesmoke;
@@ -103,25 +109,25 @@ body {
             border-radius: 10px;
             cursor: pointer;
             transition-duration: 0.5s;
-            &:hover{
+            &:hover {
                 background-color: $color;
                 color: white;
                 scale: 1.1;
             }
         }
     }
-    .elements{
+    .elements {
         width: 100%;
         height: 90%;
         overflow: scroll;
         padding: 10px;
         box-sizing: border-box;
-        transition-duration: .5s;
-        &::-webkit-scrollbar{
+        transition-duration: 0.5s;
+        &::-webkit-scrollbar {
             display: none;
         }
-        .element{
-            &::before{
+        .element {
+            &::before {
                 color: $color !important;
             }
             width: 100%;
@@ -130,45 +136,51 @@ body {
             cursor: pointer;
             pointer-events: all;
             transition-duration: 0.5s;
-            &>*{
+            & > * {
                 display: none;
             }
-            &:hover{
+            &:hover {
                 z-index: 2;
                 scale: 1.1;
             }
         }
     }
 }
-section, .title, .paragraph, .img, .list, .btn{
+.section,
+.title,
+.paragraph,
+.img,
+.list,
+.btn {
     width: 100%;
-    &>h1,
-    &>h2,
-    &>h3,
-    &>h4,
-    &>h5,
-    &>h6,
-    &>p,
-    &>img,
-    &>ul,
-    &>a{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    & > h1,
+    & > h2,
+    & > h3,
+    & > h4,
+    & > h5,
+    & > h6,
+    & > p,
+    & > img,
+    & > ul,
+    & > a {
         width: 100%;
-        height: 100%;
         margin: 0;
         padding: 0;
         color: white;
     }
-    
 }
-.area{
+.area {
     flex-grow: 2;
     min-width: 15%;
 }
-.element{
+.element {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    &::before{
+    &::before {
         content: attr(placeholder);
         position: absolute;
         top: 50%;
@@ -183,82 +195,89 @@ section, .title, .paragraph, .img, .list, .btn{
         color: $color-opacity;
         z-index: 0;
     }
-    &>.borders, &>.funcBtns{
+    & > .borders,
+    & > .funcBtns {
         transition-property: opacity;
         opacity: 0;
         pointer-events: none;
     }
-    .active:hover:not(.prime){
-        &>.borders, &>.funcBtns{
+    .active:hover:not(.prime) {
+        & > .borders,
+        & > .funcBtns {
             opacity: 1;
             pointer-events: none;
-            z-index: 2;
-            &>*{
+            z-index: 1;
+            & > * {
                 pointer-events: all;
             }
         }
     }
-    .funcBtns{
+    .funcBtns {
         width: calc(100% - 25px);
         height: 4vh;
         position: absolute;
         display: flex;
         justify-content: end;
         align-items: center;
-        img{
+        img {
             height: 100%;
             cursor: pointer;
             pointer-events: all;
         }
     }
-    .borders{
+    .borders {
         position: absolute;
         left: 0px;
         top: 0px;
         width: 100%;
         height: 100%;
-        .border1, .border2, .border3, .border4{
+        .border1,
+        .border2,
+        .border3,
+        .border4 {
             position: absolute;
             cursor: pointer;
             background-color: $color-opacity;
             box-shadow: 0px 0px 0px $color-opacity;
-            transition-duration: .5s;
+            transition-duration: 0.5s;
             pointer-events: all;
-            &:hover{
+            &:hover {
                 background-color: $color-hover;
                 box-shadow: 0px 0px 5px $color-opacity-hover;
                 z-index: 1;
             }
         }
-        .border1, .border2{
+        .border1,
+        .border2 {
             width: 100%;
             height: 12px;
             border-radius: 10px;
         }
-        .border3, .border4{
+        .border3,
+        .border4 {
             width: 12px;
             height: 100%;
             border-radius: 10px;
         }
-        .border2{
+        .border2 {
             bottom: 0px;
         }
-        .border4{
+        .border4 {
             right: 0px;
         }
     }
-    ul{
+    ul {
         display: flex;
         flex-wrap: wrap;
         padding: 0;
         margin: 0;
         list-style: none;
-        li{
+        li {
             position: relative;
             min-width: 15%;
             flex-grow: 1;
             box-shadow: inset 0px 0px 10px $color;
-            &::before{
+            &::before {
                 content: "li";
                 position: absolute;
                 top: 50%;
@@ -273,84 +292,124 @@ section, .title, .paragraph, .img, .list, .btn{
             }
         }
     }
-    a{
+    a {
         text-decoration: none;
     }
 }
-.show{
+.show {
     max-height: 300px !important;
 }
 .flipped {
     transform: rotateY(180deg);
 }
-.selectedStyle{
+.selectedStyle {
     background-color: $color-opacity-opacity;
 }
 
-.Color{
+.window {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    opacity: 0;
+    pointer-events: none;
+    transition-duration: 0.5s;
+    .bg {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.724);
+        cursor: pointer;
+    }
+    & > *:not(.bg) {
+        max-width: 80%;
+        max-height: 80%;
+
+        box-sizing: content-box;
+        border-radius: 25px;
+        z-index: 3;
+        object-fit: contain;
+    }
+}
+.Color {
     color: $color;
 }
-.OpacityColor{
+.OpacityColor {
     color: $color-opacity;
 }
-.Meta{
+.Meta {
     color: gray;
 }
-.BorderColor{
+.BorderColor {
     border-color: $color !important;
 }
-.OpacityBorderColor{
+.OpacityBorderColor {
     border-color: $color-opacity !important;
 }
-.ColorBackground{
+.ColorBackground {
     background-color: $color;
 }
-.ColorBackgroundOpacity{
+.ColorBackgroundOpacity {
     background-color: $color-opacity;
 }
-.ColorBackgroundOpacityOpacity{
+.ColorBackgroundOpacityOpacity {
     background-color: $color-opacity-opacity;
 }
-.BackgroundColor{
+.BackgroundColor {
     background-color: rgb(40, 40, 40);
 }
-.BackgroundColorLight{
-    background-color: rgb(50, 50, 50);
+.BackgroundColorLight {
+    background-color: rgb(55, 55, 55);
 }
-.BackgroundColorDark{
-    background-color: rgb(30, 30, 30);
+.BackgroundColorDark {
+    background-color: rgb(35, 35, 35);
 }
-.BackgroundColorBtn{
+.BackgroundColorBtn {
     background-color: rgb(37, 37, 37);
 }
-.Large, .Big, .Middle, .Small, .Tiny{
+.Large,
+.Big,
+.Middle,
+.Small,
+.Tiny {
     font-family: "Asap", sans-serif;
     width: 100%;
     margin: 0px;
 }
-.Large{
+.Large {
     font-size: calc($size-index * 2);
     font-weight: 600;
     letter-spacing: 3px;
     text-transform: uppercase;
 }
-.Big{
+.Big {
     font-size: calc($size-index * 1.7);
     font-weight: 500;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
-.Middle{
+.Middle {
     font-size: calc($size-index * 1.2);
     font-weight: 600;
     letter-spacing: 3px;
     text-transform: uppercase;
 }
-.Small{
-    font-size: calc($size-index * .9);
+.Small {
+    font-size: calc($size-index * 0.9);
     font-weight: 500;
 }
-.Tiny{
-    font-size: calc($size-index * .65);
+.Tiny {
+    font-size: calc($size-index * 0.65);
     font-weight: 400;
+}
+.disableBtn{
+    background-color: $color-opacity-opacity;
+    
 }
